--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                   <li><a href="terms_services.html">Terms of Services</a></li>
                 </ul>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <!-- <div class="col-lg-2 col-md-6">
                 <h4 class="responsive_mobile">Follow Us</h4>
                 
                 <p style="color: #f7f7f7;" class="let_us">Let us be social</p>
@@ -546,7 +546,7 @@
                   <a href="#"><i class="fab fa-linkedin ms-2"></i></a>
                   <a href="#"><i class="fab fa-youtube ms-2"></i></a>
                 </div>
-              </div>
+              </div> -->
               <div class="col-lg-4 mt-3 mt-md-0">
                 <h4 class="responsive_mobile">LatestNews</h4>
                 <p class="p" style="color: #f7f7f7;">Seagull Latest news delivered right to your inbox!</p>
